--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
   },
   "homepage": "https://github.com/spring-guides/tut-react-and-spring-data-rest",
   "dependencies": {
+    "net": "^1.0.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "rest": "^1.3.1",
     "sockjs-client": "^1.0.3",
-    "stompjs": "^2.3.3"
-
+    "stompjs": "^2.3.3",
+    "when": "^3.7.8"
   },
   "scripts": {
     "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js"
