--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,10 @@
     </parent>
     <groupId>com.madronetek.admin</groupId>
     <artifactId>todo</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2-ALPHA.1</version>
     <name>todo</name>
     <description>Demo project for Spring Boot</description>
+    <packaging>jar</packaging>
 
     <properties>
         <java.version>1.8</java.version>
@@ -47,10 +48,6 @@
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
