--- a/package.json
+++ b/package.json
@@ -20,12 +20,21 @@
   },
   "homepage": "https://github.com/RodrigoMattosoSilveira/react-springboot-todo",
   "dependencies": {
+    "@material-ui/core": "^4.9.14",
+    "@material-ui/icons": "^4.9.1",
+    "classnames": "^2.2.6",
+    "material-table": "^1.57.2",
     "net": "^1.0.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-redux": "^7.2.0",
+    "react-scripts": "^3.4.1",
+    "redux": "^4.0.5",
     "rest": "^1.3.1",
+    "shortid": "^2.2.15",
     "sockjs-client": "^1.0.3",
     "stompjs": "^2.3.3",
+    "typeface-roboto": "^0.0.75",
     "when": "^3.7.8"
   },
   "scripts": {
@@ -35,7 +44,17 @@
     "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "@testing-library/jest-dom": "^5.8.0",
+    "@testing-library/react": "^10.0.4",
+    "@testing-library/user-event": "testing-library/user-event",
+    "@types/jest": "^25.2.3",
+    "@types/node": "^14.0.5",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/shortid": "^0.0.29",
     "babel-loader": "^8.0.2",
+    "typescript": "^3.9.3",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0"
   }
