--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/shortid": "^0.0.29",
     "babel-loader": "^8.0.2",
+    "ts-loader": "^7.0.4",
     "typescript": "^3.9.3",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0"
