--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^7.2.0",
+    "react-redux-lifecycle": "^2.2.0",
     "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
     "rest": "^1.3.1",
