--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spring-data-rest-and-reactjs",
-  "version": "0.0.3",
+  "version": "0.0.4-alpha.1",
   "description": "Demo of ReactJS + Spring Data REST",
   "repository": {
     "type": "git",
