--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "material-table": "^1.57.2",
     "net": "^1.0.2",
@@ -31,6 +32,7 @@
     "react-redux-lifecycle": "^2.2.0",
     "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "rest": "^1.3.1",
     "shortid": "^2.2.15",
     "sockjs-client": "^1.0.3",
@@ -48,11 +50,13 @@
     "@testing-library/jest-dom": "^5.8.0",
     "@testing-library/react": "^10.0.4",
     "@testing-library/user-event": "testing-library/user-event",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.5",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
+    "@types/redux-thunk": "^2.1.0",
     "@types/shortid": "^0.0.29",
     "@types/when": "^2.4.33",
     "babel-loader": "^8.0.2",
