--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
+    "es6-promise": "^4.2.8",
     "material-table": "^1.57.2",
     "net": "^1.0.2",
     "react": "^16.5.2",
@@ -51,6 +52,7 @@
     "@testing-library/react": "^10.0.4",
     "@testing-library/user-event": "testing-library/user-event",
     "@types/axios": "^0.14.0",
+    "@types/es6-promise": "^3.3.0",
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.5",
     "@types/react": "^16.9.35",
