--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@testing-library/react": "^10.0.4",
     "@testing-library/user-event": "testing-library/user-event",
     "@types/axios": "^0.14.0",
+    "@types/classnames": "^2.2.10",
     "@types/es6-promise": "^3.3.0",
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.5",
