--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@stomp/stompjs": "^5.4.4",
     "axios": "^0.19.2",
     "es6-promise": "^4.2.8",
     "material-table": "^1.57.2",
@@ -37,7 +38,6 @@
     "rest": "^1.3.1",
     "shortid": "^2.2.15",
     "sockjs-client": "^1.0.3",
-    "stompjs": "^2.3.3",
     "typeface-roboto": "^0.0.75",
     "when": "^3.7.8"
   },
@@ -60,6 +60,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/redux-thunk": "^2.1.0",
     "@types/shortid": "^0.0.29",
+    "@types/stompjs": "^2.3.4",
     "@types/when": "^2.4.33",
     "babel-loader": "^8.0.2",
     "ts-loader": "^7.0.4",
